# 2022_2_SL

./: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: ci.yml
include/: Config.hpp  IdleManager.hpp  client.h  component.h  component.hpp  component_list.hpp  config.h  demon_main.hpp  logacceptor.h  logcollector.h  logsender.h  logwriter.h  message.h  message.hpp  message_manager.hpp  mock_client.h  mock_config.h  mock_message.h  mock_sensor.h  mock_serializer.h  mock_socket.h  sensor.h  serializer.h  socket.h
src/: IdleManager.cpp  component.cpp
test/: CMakeLists.txt  mocks.hpp  test.cpp
test/mocks/: CMakeLists.txt  mocks.cpp
